--- a/includes/assets/css/common.css
+++ b/includes/assets/css/common.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+/* @import url('https://fonts.googleapis.com/css?family=Roboto'); */
 
-body {
+/* body {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-}
+} */
 .d-none{
   display: none;
 }
@@ -42,7 +42,8 @@ body {
   font-size: 24px;
   font-weight: 600;
   line-height: 1em;
-  margin: 0 0 10px;
+  margin: 0 0 18px;
+  color: #fff;
 }
 .service-content .learn-btn {
   font-size: 18px;
@@ -117,6 +118,10 @@ body {
   opacity: 1;
   visibility: visible;
 }
+.success-story-wrap .single-success-story:hover .service-content .learn-btn:hover{
+  background-color: #FFB853;
+  color: #000;
+}
 .success-story-wrap .single-success-story:after {
   position: absolute;
   left: 0;
@@ -150,8 +155,8 @@ body {
   width: 96px;
 }
 .swiper-button-prev:hover, .swiper-button-next:hover {
-  background-color: #D4A96C;
-  border-color: #D4A96C;
+  background-color: #FFB853;
+  border-color: #FFB853;
 }
 .success-story-wrap .swiper-button-prev:hover img, .success-story-wrap  .swiper-button-next:hover img {
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
