--- a/includes/assets/css/blog.css
+++ b/includes/assets/css/blog.css
@@ -1,26 +1,32 @@
 
 /* Blog */
-.enginescale-blog-section {
-    display: grid;
-    grid-gap: 2rem;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(1, 0px);
+@media (min-width: 1025px){
+
+    .enginescale-blog-section {
+        display: grid;
+        grid-gap: 2rem;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(1, 0px);
+    }
+    .enginescale-blog-section .single-item  {
+        height: 264px;
+    }
+    .enginescale-blog-section .single-item:nth-child(1) {
+        grid-row: 2/6;
+        height: 560px
+    }
+    .enginescale-blog-section .single-item:nth-child(2) {
+        grid-row: 2/4;
+        height: 260px;
+    }
+    .enginescale-blog-section .single-item:nth-child(3) {
+        grid-row: 4/6;
+        height: 260px;
+    }
+
+    
 }
-.enginescale-blog-section .single-item  {
-    height: 264px;
-}
-.enginescale-blog-section .single-item:nth-child(1) {
-    grid-row: 2/6;
-	height: 560px
-}
-.enginescale-blog-section .single-item:nth-child(2) {
-    grid-row: 2/4;
-    height: 260px;
-}
-.enginescale-blog-section .single-item:nth-child(3) {
-    grid-row: 4/6;
-    height: 260px;
-}
+
 .blog-inner {
     display: flex;
     height: 100%;
@@ -137,6 +143,120 @@
 
 
 
+/* Related Posts */
+.success-story-wrap.recent-posts .service-content {
+    position: relative;
+}
+.success-story-wrap.recent-posts .single-success-story:hover:after {
+    background: none;
+}
+.success-story-wrap.recent-posts .single-success-story .success-story-thumb, 
+.success-story-wrap.recent-posts .single-success-story .success-story-thumb {
+    height: 280px;
+}
+.success-story-wrap.recent-posts .single-success-story:after {
+    background: none;
+    opacity: 0;
+    visibility: hidden;
+}
+.success-story-wrap.recent-posts .service-content h2 {
+    color: #1D1D1D;
+    font-size: 22px;
+    line-height: 28px;
+    font-weight: 700;
+}
+.success-story-wrap.recent-posts .service-content h2:hover{
+    color: #FFB853;
+}
+.success-story-wrap.recent-posts .single-success-story .service-content .learn-btn {
+    padding: 0;
+    background: transparent;
+    color: #1D1D1D;
+    opacity: 1;
+    visibility: visible;
+}
+.success-story-wrap.recent-posts .single-success-story .service-content {
+    padding: 20px;
+    background: #FAFAFA;
+    bottom: 0;
+    min-height: 192px;
+    position: relative;
+}
+.success-story-wrap.recent-posts .single-success-story:hover .service-content .learn-btn:hover {
+    background: transparent;
+    color: #FFB853;
+}
+.success-story-wrap.recent-posts .swiper-button-prev, 
+.success-story-wrap.recent-posts .swiper-button-next {
+    border-radius: 0;
+    height: 56px;
+    width: 56px;
+}
+.success-story-wrap.recent-posts .swiper-button-next {
+    right: -28px;
+}
+.success-story-wrap.recent-posts .swiper-button-prev {
+    left: -28px;
+    right: auto;
+}
+
+
+
+/* Recent Posts */
+.single-recent-post {
+    display: flex;
+    margin-bottom: 15px;
+}
+.recent-post-thumb {
+    width: 150px;
+    height: 100px;
+    background-size: cover;
+    background-position: center;
+    background-color: #ddd;
+    margin-right: 10px;
+}
+.recent-post-content h2 {
+    font-size: 18px;
+    line-height: 20px;
+    color: #040415;
+}
+.recent-post-content h2:hover{
+    color: #F9BD4A;    
+}
+
+
+/* .enginescale-blog-section.recent-posts {
+    display: block;
+}
+.enginescale-blog-section.recent-posts .single-item:nth-child(1), 
+.enginescale-blog-section.recent-posts .single-item:nth-child(2), 
+.enginescale-blog-section.recent-posts .single-item:nth-child(3) {
+    height: auto !important;
+}
+.enginescale-blog-section.recent-posts .single-item .blog-inner .blog-thumb-wrap .blog-thumb {
+    height: 280px !important;
+    width: 100%;
+}
+.enginescale-blog-section.recent-posts .blog-inner {
+    display: block;
+}
+.enginescale-blog-section.recent-posts .blog-inner .blog-thumb-wrap {
+    width: 100%;
+}
+.enginescale-blog-section.recent-posts .enginescale-blog-section .blog-content {
+    display: block;
+    width: 100%;
+}
+
+.enginescale-blog-section.recent-posts .single-item:nth-child(2) .blog-content h2, 
+.enginescale-blog-section.recent-posts .single-item:nth-child(3) .blog-content h2 {
+    overflow: inherit;
+    display: block;
+}
+.enginescale-blog-section.recent-posts h2 {
+    font-size: 22px;
+    line-height: 28px;
+} */
 
 
 
@@ -171,33 +291,29 @@
 
 
 /* Responsive CSS */
-@media (max-width:1024px) {
-   
 
 
-    
+@media (max-width: 1024px) {
+
+    .enginescale-blog-section h2 {
+        font-size: 18px;
+        line-height: 30px;
+        margin: 0px 0 15px;
+    }
+    .enginescale-blog-section .single-item:nth-child(1) .blog-content {
+        height: auto;
+    }
+    .enginescale-blog-section .single-item {
+        margin-bottom: 20px;
+    }
+
+  
 }
 
 /* max-width:768px */
 @media (max-width:768px) {
     
-    /* .enginescale-blog-section .single-item {
-        display: block;
-        height: auto;
-    } */
-    /* .blog-thumb-wrap .blog-thumb {
-        height: 200px;
-    }
-    .enginescale-blog-section .single-item .blog-thumb-wrap {
-        width: 100%;
-    }
-    .enginescale-blog-section .single-item .blog-content {
-        width: 100%;
-        height: auto;
-    } */
-    /* .post-excerpt {
-        display: none;
-    } */
+  
 
     
 }
