--- a/includes/assets/css/blog.css
+++ b/includes/assets/css/blog.css
@@ -4,7 +4,6 @@
 
     .enginescale-blog-section {
         display: grid;
-        grid-gap: 2rem;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(1, 0px);
     }
@@ -13,15 +12,15 @@
     }
     .enginescale-blog-section .single-item:nth-child(1) {
         grid-row: 2/6;
-        height: 560px
+        height: 540px
     }
     .enginescale-blog-section .single-item:nth-child(2) {
         grid-row: 2/4;
-        height: 260px;
+        height: 270px;
     }
     .enginescale-blog-section .single-item:nth-child(3) {
         grid-row: 4/6;
-        height: 260px;
+        height: 270px;
     }
 
     
@@ -31,11 +30,8 @@
     display: flex;
     height: 100%;
 }
-.blog-inner .blog-content {
-    width: 60%;
-}
 .blog-inner .blog-thumb-wrap {
-    width: 40%;
+    width: 100%;
 }
 /* large box */
 .enginescale-blog-section .single-item:nth-child(1) .blog-inner{
@@ -45,13 +41,13 @@
 .enginescale-blog-section .single-item:nth-child(1) .blog-inner .blog-thumb-wrap{
     width: 100%;
 }
+.enginescale-blog-section .single-item .blog-inner .blog-thumb-wrap .blog-thumb{
+    height: 270px;
+}
 .enginescale-blog-section .single-item:nth-child(1) .blog-inner .blog-thumb-wrap .blog-thumb {
-    height: 340px;
+    height: 540px;
 }
-.enginescale-blog-section .single-item:nth-child(1) .blog-content {
-    justify-content: space-between;
-    height: 220px;
-}
+
 
 
 .enginescale-blog-section .single-item:nth-child(2) .blog-content h2,
@@ -80,14 +76,15 @@
     color: #040415;
 }
 .enginescale-blog-section .blog-content{
-    padding: 20px 20px 30px 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding: 0px 40px 50px 40px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 2;
 }
 .blog-meta {
-    font-size: 12px;
-    color: #1D1D1D;
+    font-size: 14px;
+    color: #fff;
     margin-bottom: 8px;
 }
 .blog-meta p {
@@ -97,14 +94,14 @@
     font-weight: 600;
 }
 .enginescale-blog-section h2 {
-    font-size: 24px;
-    line-height: 36px;
+    font-size: 42px;
+    line-height: 2.7rem;
     margin: 0px 0 15px;
 }
 .enginescale-blog-section h2, 
 .enginescale-blog-section h2 a,
 .enginescale-blog-section .redmore{
-    color: #1D1D1D;
+    color: #fff;
 }
 .enginescale-blog-section .redmore{
     font-size: 18px;
@@ -129,6 +126,7 @@
 }
 .blog-thumb-wrap{
     overflow: hidden;  
+    position: relative;
 }
 .blog-thumb-wrap .blog-thumb{
     transition: all .5s ease;  
@@ -139,8 +137,28 @@
 }
 .enginescale-blog-section .single-item{
     background-color: #FAFAFA;
+    position: relative;
 }
 
+.blog-thumb {
+    position: relative;
+    z-index: 2;
+}
+.blog-thumb:after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #000000;
+    content: "";
+    z-index: 1;
+    opacity: .5;
+    transition: all .5s ease;
+}
+.blog-thumb-wrap:hover .blog-thumb:after {
+    opacity: .2;
+}
 
 
 /* Related Posts */
@@ -225,73 +243,25 @@
 }
 
 
-/* .enginescale-blog-section.recent-posts {
-    display: block;
-}
-.enginescale-blog-section.recent-posts .single-item:nth-child(1), 
-.enginescale-blog-section.recent-posts .single-item:nth-child(2), 
-.enginescale-blog-section.recent-posts .single-item:nth-child(3) {
-    height: auto !important;
-}
-.enginescale-blog-section.recent-posts .single-item .blog-inner .blog-thumb-wrap .blog-thumb {
-    height: 280px !important;
-    width: 100%;
-}
-.enginescale-blog-section.recent-posts .blog-inner {
-    display: block;
-}
-.enginescale-blog-section.recent-posts .blog-inner .blog-thumb-wrap {
-    width: 100%;
-}
-.enginescale-blog-section.recent-posts .enginescale-blog-section .blog-content {
-    display: block;
-    width: 100%;
-}
-
-.enginescale-blog-section.recent-posts .single-item:nth-child(2) .blog-content h2, 
-.enginescale-blog-section.recent-posts .single-item:nth-child(3) .blog-content h2 {
-    overflow: inherit;
-    display: block;
-}
-.enginescale-blog-section.recent-posts h2 {
-    font-size: 22px;
-    line-height: 28px;
-} */
-
-
-
-/* page-nav-container  */
-/* .page-nav-container {
-    text-align: center;
-    margin-top: 50px;
-}
-.page-nav-container a, .page-nav-container span {
-    border: 1px solid #040415;
-    background: transparent;
-    color: #040415;
-    border-radius: 3px;
-    font-family: 'Barlow Condensed', sans-serif;
-    font-weight: 500;
-    display: inline-block;
-    padding: 7px 19px;
-    margin: 4px 2px;
-}
-.page-nav-container a:hover {
-    background-color: #040415;
-    color: #fff;
-}
-.page-nav-container span.current {
-    background-color: #040415;
-    color: #fff;
-} */
-
-
-
-
-
-
 /* Responsive CSS */
 
+@media (max-width: 1300px){
+
+    .success-story-wrap.recent-posts .swiper-button-next {
+        right: 0;
+        top: -40px;
+    }
+    .success-story-wrap.recent-posts .swiper-button-prev {
+        left: auto;
+        right: 61px;
+        top: -40px;
+    }
+    .success-story-wrap.recent-posts .swiper-button-prev, .success-story-wrap.recent-posts .swiper-button-next{
+        height: 45px;
+        width: 45px;
+    }
+
+}
 
 @media (max-width: 1024px) {
 
@@ -300,11 +270,12 @@
         line-height: 30px;
         margin: 0px 0 15px;
     }
-    .enginescale-blog-section .single-item:nth-child(1) .blog-content {
-        height: auto;
+    .enginescale-blog-section .single-item .blog-inner .blog-thumb-wrap .blog-thumb,
+    .enginescale-blog-section .single-item:nth-child(1) .blog-inner .blog-thumb-wrap .blog-thumb{
+        height: 280px;
     }
-    .enginescale-blog-section .single-item {
-        margin-bottom: 20px;
+    .enginescale-blog-section .blog-content{
+        padding: 0px 20px 0px 20px;
     }
 
   
