--- a/includes/assets/css/common.css
+++ b/includes/assets/css/common.css
@@ -1,14 +1,26 @@
-/* @import url('https://fonts.googleapis.com/css?family=Roboto'); */
 
-/* body {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-} */
 .d-none{
   display: none;
 }
 .d-blcok{
   display: block;
+}
+.d-flex{
+	display: flex;
+}
+.align-items-center{
+	align-items: center;
+}
+.custom-container {
+    max-width: 1310px;
+    margin: 0 auto;
+	padding: 0 15px
+}
+.w-50{
+	width: 50%;
+}
+.position-relative{
+	position: relative;
 }
 
 
@@ -36,4 +48,182 @@
 .page-nav-container span.current {
   background-color: #FFB853;
   color: #000;
+}
+
+
+
+
+@media (max-width: 767px) {
+	.w-50 {
+		width: 100%;
+	}
+	.d-flex {
+		flex-wrap: wrap;
+	}
+	.order2{
+		order: 2;
+	}
+	
+}
+
+
+
+
+/* 
+
+.flip-container {
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -o-perspective: 1000;
+  perspective: 1000;
+
+	border: 1px solid #ccc;
+}
+
+	.flip-container:hover .flipper,  
+  .flip-container.hover .flipper {
+		-webkit-transform: rotateY(180deg);
+		-moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+		transform: rotateY(180deg);
+	}
+
+.flip-container, .front, .back {
+	width: 320px;
+	height: 427px;
+}
+
+.flipper {
+	-webkit-transition: 0.6s;
+	-webkit-transform-style: preserve-3d;
+
+	-moz-transition: 0.6s;
+	-moz-transform-style: preserve-3d;
+  
+  -o-transition: 0.6s;
+	-o-transform-style: preserve-3d;
+
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+.front, .back {
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.front {
+	background: url(http://davidwalsh.name/demo/dwflip.jpg) 0 0 no-repeat;
+	z-index: 2;
+}
+
+.back {
+	-webkit-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+	transform: rotateY(180deg);
+
+	background: #f8f8f8;
+}
+
+.front .name {
+	font-size: 2em;
+	display: inline-block;
+	background: rgba(33, 33, 33, 0.9);
+	color: #f8f8f8;
+	font-family: Courier;
+	padding: 5px 10px;
+	border-radius: 5px;
+	bottom: 60px;
+	left: 25%;
+	position: absolute;
+	text-shadow: 0.1em 0.1em 0.05em #333;
+
+	-webkit-transform: rotate(-20deg);
+	-moz-transform: rotate(-20deg);
+  -o-transform: rotate(-20deg);
+	transform: rotate(-20deg);
+}
+
+.back-logo {
+	position: absolute;
+	top: 40px;
+	left: 90px;
+	width: 160px;
+	height: 117px;
+	background: url(http://davidwalsh.name/demo/logo.png) 0 0 no-repeat;
+}
+
+.back-title {
+	font-weight: bold;
+	color: #00304a;
+	position: absolute;
+	top: 180px;
+	left: 0;
+	right: 0;
+	text-align: center;
+	text-shadow: 0.1em 0.1em 0.05em #acd7e5;
+	font-family: Courier;
+	font-size: 2em;
+}
+
+.back p {
+	position: absolute;
+	bottom: 40px;
+	left: 0;
+	right: 0;
+	text-align: center;
+	padding: 0 20px;
+  font-family: arial;
+  line-height: 2em;
+} */
+
+
+
+ul.skltbs-tab-group {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    column-gap: 10px;
+}
+
+ul.skltbs-tab-group li {
+    width: 100%;
+}
+
+ul.skltbs-tab-group li button {
+	width: 100%;
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 10px 10px 0 0;
+    border: 0;
+}
+ul.skltbs-tab-group li button.skltbs-active {
+    background-color: #FFFAF3;
+    color: #000000;
+	border: 0;
+}
+ul.skltbs-tab-group li button:hover {
+    background: #FFFAF3;
+	border: 0;
+}
+
+.skltbs-panel.skltbs-active {
+    background: #fffaf3;
+    padding: 25px;
+    border-radius: 0 0 7px 7px;
+}
+
+
+.mean-container a.meanmenu-reveal {
+    background: #767676;
 }
